<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.sleepydragon.capbutnbrightness.SetBrightnessFragment"
    >

    <Button
        android:id="@+id/btnDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_default"
        />

    <ImageView
        android:id="@+id/btnOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/btn_off"
        android:src="@drawable/brightness_button_off"
        />

    <ImageView
        android:id="@+id/btnDim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/btn_dim"
        android:src="@drawable/brightness_button_dim"
        />

    <ImageView
        android:id="@+id/btnBright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/btn_bright"
        android:src="@drawable/brightness_button_bright"
        />

    <!-- Begin upgrade banner -->
    <LinearLayout
        android:id="@+id/upgradeBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_upgrade_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_upgrade_description"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnUpgrade"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_upgrade"
            />

    </LinearLayout>
    <!-- End upgrade banner -->

</LinearLayout>